# yeet

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  build.rs  flake.nix
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  scoop-excavator.yml
assets/windows/: yeet.manifest
bucket/: yeet.json
docs/: DESIGN.md  compositors.md  demo-capture.md  release-checklist.md  windows-release.md  windows.md
packaging/arch/: .SRCINFO  .SRCINFO-git  PKGBUILD  PKGBUILD-git
packaging/flatpak/: FLATHUB_SUBMISSION.md  cargo-sources.json  io.github.hjosugi.Yeet.yml
packaging/linux/: io.github.hjosugi.Yeet.desktop  io.github.hjosugi.Yeet.metainfo.xml  yeet.1
packaging/nix/: default.nix
packaging/windows/: New-WingetManifest.ps1  New-WingetSubmission.ps1  Sign-WindowsArtifacts.ps1  Test-WingetManifest.ps1  yeet.iss
qml/: Main.qml
scripts/: Test-WindowsRuntime.ps1  bundle-windows.sh  capture-demo-linux.sh  capture-demo-windows.ps1  check-release-metadata.sh  test-layer-shell-smoke.sh
src/: drag.rs  i18n.rs  lib.rs  main.cpp  main.rs  model.rs  platform.rs  services.rs  settings.rs  ui.rs
src/core/: shelfmodel.cpp  shelfmodel.h
src/ui/: dragouthelper.cpp  dragouthelper.h
