[package]
name = "wayland-yeet"
version = "0.2.0"
edition = "2024"
rust-version = "1.92"
description = "A native drag-and-drop shelf for Wayland and Windows"
license = "MIT"
repository = "https://github.com/hjosugi/wayland-yeet"

[[bin]]
name = "yeet"
path = "src/main.rs"

[dependencies]
directories = "6.0"
gio = "0.22"
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_8"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4-layer-shell = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
gdk-win32 = { package = "gdk4-win32", version = "0.11", features = ["win32"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.31"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
