[package]
name = "wayland-yeet"
version = "0.4.0"
edition = "2024"
rust-version = "1.92"
description = "A native drag-and-drop shelf for Wayland and Windows"
license = "MIT"
repository = "https://github.com/hjosugi/yeet"

[[bin]]
name = "yeet"
path = "src/main.rs"

[dependencies]
directories = "6.0"
gio = "0.22"
glib = "0.22"
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.13", default-features = false, features = ["global_shortcuts", "tokio"] }
futures-util = "0.3"
gtk4-layer-shell = "0.8"
ksni = "0.3.5"
tokio = { version = "1", features = ["rt", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
gdk-win32 = { package = "gdk4-win32", version = "0.11", features = ["win32"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.31"

[dev-dependencies]
tempfile = "3.20"

[profile.release]
lto = "thin"
strip = true
